# weave-bot-orb

./: .gitignore  CLAUDE.md  Dockerfile
agent/: .env.example  Dockerfile  debug_curl_25.py  extractor.py  main.py  models.py  orgs.example.yaml  processor.py  railway.toml  requirements.txt  scraper.py  test_scrape.py  test_slow.py  test_text_only.py
agent/api/: routes.py
agent/core/: callback.py  config.py  org_config.py  schemas.py  tasks.py  time_utils.py  validation.py
agent/integrations/: grist.py
agent/llm/: base.py  factory.py  gemini.py  openai_compat.py  prompts.py
agent/scraper/: orchestrator.py  processor.py
agent/tests/: conftest.py  test_grist_fields.py  test_json_ld.py  test_llm_factory.py  test_openai_compat.py  test_org_config.py  test_prompts.py  test_scrape_endpoint.py  test_time_utils.py  test_validation.py
discord/: .env.example  .gitignore  README.md  pyproject.toml  railway.toml
discord/src/: bot.py  calendar.py  config.py  database.py  main.py  utils.py  webhook.py
docs/: multi-org-guide.md
docs/brainstorms/: 2026-02-05-multi-org-support-brainstorm.md  2026-02-05-platform-evolution-brainstorm.md
docs/plans/: 2026-02-05-feat-multi-org-support-plan.md  2026-02-05-feat-multi-tenant-platform-evolution-plan.md
frontend/: .env  .env.development  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue
slack/: .env.example  pyproject.toml
slack/src/: bot.py  config.py  main.py  utils.py  webhook.py
slack/tests/: test_bot.py  test_utils.py
